--- a/fly.toml
+++ b/fly.toml
@@ -10,11 +10,19 @@ primary_region = 'hkg'
 
 [env]
 
+[http_service]
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = false
+  auto_start_machines = true
+  min_machines_running = 1
+  processes = ['app']
+
 [[services]]
   http_checks = []
   internal_port = 8080
   processes = ["app"]
-  auto_stop_machines = false
+  
   protocol = "tcp"
   script_checks = []
   [services.concurrency]
